# JoystickTesting

./: AGENTS.md  CMakeLists.txt  Joystick.cpp
include/: ComHelpers.h  ComPtr.h  DirectInputManager.h  JoystickApp.h  JoystickNetwork.h  JsonUtils.h  LogUtils.h  RegistryUtils.h  StringUtils.h  XInputFilter.h  res.h
references/: GetAllCameras.md  Unifi_Client.cs
res/: application.manifest  res.rc
src/: DirectInputManager.cpp  JoystickApp.cpp  JoystickNetwork.cpp  JsonUtils.cpp  LogUtils.cpp  RegistryUtils.cpp  StringUtils.cpp  XInputFilter.cpp  main.cpp
